--- a/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
@@ -201,6 +201,7 @@
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="ToolTip" Value="{Binding Name}" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -212,6 +213,7 @@
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="ToolTip" Value="{Binding Address}" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -223,6 +225,7 @@
                                     <Setter Property="Padding" Value="16" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
+                                    <Setter Property="ToolTip" Value="{Binding Type}" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
