--- a/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
@@ -37,7 +37,7 @@
                        Margin="50 0 0 0"/>
 
             <WrapPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 30 0">
-                <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
+                <Border Width="300" Height="40" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
@@ -45,7 +45,16 @@
                         </Grid.ColumnDefinitions>
                         <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
                         <Grid Grid.Column="1">
-                            <TextBox x:Name="myTextBox" Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" MaxLength="60" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
+                            <TextBox x:Name="myTextBox" Text="{Binding Search, UpdateSourceTrigger=PropertyChanged}" 
+                                     FontFamily="Poppins" 
+                                     MaxLength="60" 
+                                     Background="Transparent" 
+                                     BorderThickness="0" 
+                                     Padding="5" 
+                                     VerticalContentAlignment="Center" 
+                                     FontSize="14" 
+                                     Foreground="Black"
+                                     Cursor="IBeam">
                                 <TextBox.Style>
                                     <Style TargetType="TextBox">
                                         <Setter Property="Template">
@@ -53,7 +62,12 @@
                                                 <ControlTemplate TargetType="TextBox">
                                                     <Grid>
                                                         <ScrollViewer x:Name="PART_ContentHost"/>
-                                                        <TextBlock Text="Search..." FontSize="14" FontFamily="Poppins" Foreground="Gray" VerticalAlignment="Center" Panel.ZIndex="1">
+                                                        <TextBlock Text="Search..." 
+                                                                   FontSize="14" 
+                                                                   FontFamily="Poppins" 
+                                                                   Foreground="Gray" 
+                                                                   VerticalAlignment="Center" 
+                                                                   Panel.ZIndex="1">
                                                             <TextBlock.Style>
                                                                 <Style TargetType="TextBlock">
                                                                     <Setter Property="Visibility" Value="Collapsed" />
@@ -128,7 +142,7 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border Margin="35 0 10 30" 
+                            <Border Margin="70 0 20 30" 
                                     CornerRadius="30" 
                                     Background="#DFE6F0">
                                 <Grid>
@@ -142,7 +156,7 @@
 
                                     <Border CornerRadius="5">
                                         <Image Source="../../../Style/Images/trip.png" 
-                                               Width="400" 
+                                               Width="350" 
                                                Height="auto" 
                                                Margin="0 25 0 0"
                                                Grid.Row="1"/>
@@ -150,24 +164,25 @@
                                     <TextBlock
                                         Text="{Binding Name}"
                                         TextWrapping="Wrap"
+                                        Width="300"
                                         Grid.Row="2"
-                                        Margin="20 20 10 20"
+                                        Margin="0 20 10 20"
                                         Foreground="Black"
                                         FontSize="30"
                                         FontWeight="DemiBold"
                                         />
                                     <ScrollViewer VerticalScrollBarVisibility="Auto"
                                                   Grid.Row="3"
-                                                  Height="200">
+                                                  Height="150">
                                         <TextBlock
-                                        Text="{ Binding Description }"
-                                        Width="400"
-                                        TextWrapping="Wrap"
-                                        Grid.Row="3"
-                                        Margin="20 0 20 20"
-                                        FontSize="17"
-                                        Foreground="#545454"
-                                        LineHeight="32"/>
+                                            Text="{ Binding Description }"
+                                            Width="300"
+                                            TextWrapping="Wrap"
+                                            Grid.Row="3"
+                                            Margin="20 0 20 20"
+                                            FontSize="17"
+                                            Foreground="#545454"
+                                            LineHeight="32"/>
                                     </ScrollViewer>
 
                                     <TextBlock
@@ -176,8 +191,8 @@
                                         Text="{Binding Price}"
                                         HorizontalAlignment="Center"
                                         TextAlignment="Right"
-                                        Margin="180 10 100 20"
-                                        FontSize="35"
+                                        Margin="100 10 120 20"
+                                        FontSize="32"
                                         Foreground="#1E2F97"
                                         FontWeight="SemiBold"
                                         />
@@ -185,8 +200,8 @@
                                         Grid.Row="4"
                                         Text="RSD"
                                         HorizontalAlignment="Right"
-                                        Margin="0 10 30 20"
-                                        FontSize="35"
+                                        Margin="0 10 50 20"
+                                        FontSize="32"
                                         Foreground="#1E2F97"
                                         FontWeight="SemiBold"
                                         />
@@ -195,11 +210,11 @@
                                     <Button
                                         Content="Delete"
                                         Cursor="Hand"
-                                        Width="180"
+                                        Width="140"
                                         Background="#4889E6"
                                         BorderBrush="Transparent"
                                         Grid.Row="5" 
-                                        Margin="30 80 30 30"
+                                        Margin="30 60 30 25"
                                         HorizontalAlignment="Left"
                                         Foreground="White"
                                         FontSize="16"
@@ -215,12 +230,12 @@
                                     </Button>
                                     <Button
                                         Content="See Details"
-                                        Width="180"
+                                        Width="140"
                                         Background="White"
                                         Foreground="Black"
                                         BorderBrush="Transparent"
                                         Grid.Row="5" 
-                                        Margin="0 80 30 30"
+                                        Margin="0 60 40 25"
                                         HorizontalAlignment="Right"
                                         FontSize="16"
                                         Height="36"
