--- a/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentTripsView.xaml
@@ -36,8 +36,13 @@
                        MaxWidth="439"
                        Margin="50 0 0 0"/>
 
-            <WrapPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 30 0">
-                <Border Width="300" Height="40" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
+            <WrapPanel Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0 0 10 0">
+                <Border Width="{Binding FieldsWidth}" 
+                        Height="40" 
+                        Background="White" 
+                        BorderBrush="Gray" 
+                        BorderThickness="1"
+                        CornerRadius="15">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
@@ -100,7 +105,7 @@
                     Text="Sort by:"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Right"
-                    Margin="50 0 20 0"
+                    Margin="20 0 20 0"
                     Foreground="Black"
                     FontWeight="DemiBold"/>
 
@@ -109,7 +114,7 @@
                     FontSize="15"
                     VerticalContentAlignment="Top"
                     ItemsSource="{Binding SortCriteria}"
-                    Width="250"
+                    Width="{Binding FieldsWidth}"
                     Height="30"
                     />
                 <Button Cursor="Hand" 
