--- a/TravelApp/DesktopHost/View/Agent/NewPlaceView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/NewPlaceView.xaml
@@ -7,7 +7,8 @@
              xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel.Component.Agent"
              xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
-             mc:Ignorable="d" Background="#DFE6F0"
+             mc:Ignorable="d" 
+             Background="White"
              SizeChanged="Window_SizeChanged"
              d:DataContext="{d:DesignInstance Type=viewmodels:NewPlaceViewModel}" >
     <UserControl.Resources>
