--- a/TravelApp/DesktopHost/View/LoginView.xaml
+++ b/TravelApp/DesktopHost/View/LoginView.xaml
@@ -8,7 +8,7 @@
         xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
         xmlns:views="clr-namespace:TravelApp.DesktopHost.View"
         mc:Ignorable="d"
-        Background="#DFE6F0"
+        Background="White"
         SizeChanged="Window_SizeChanged"
         d:DataContext="{d:DesignInstance Type=viewmodels:LoginViewModel}">
     <ScrollViewer>
@@ -122,7 +122,6 @@
                        FontSize="20"
                        Margin="10, 10, 0, 0"
                        Foreground="#4889E6" 
-                       Background="#DFE6F0"
                        FontFamily="Poppins" 
                        ToolTip="Go to sign up page"
                        FontWeight="Medium" Cursor="Hand"
