--- a/TravelApp/App.xaml
+++ b/TravelApp/App.xaml
@@ -38,6 +38,9 @@
                     <Trigger Property="IsMouseCaptured" Value="True">
                         <Setter Property="Background" Value="#80AAE8"/>
                     </Trigger>
+                    <Trigger Property="IsEnabled" Value="False">
+                        <Setter Property="Background" Value="#B1C8E8" />
+                    </Trigger>
                 </Style.Triggers>
                 <Style.Resources>
                     <Style TargetType="Border">
