implemented validation on typing for signup

--- a/TravelApp/DesktopHost/View/BindablePasswordBox.xaml
+++ b/TravelApp/DesktopHost/View/BindablePasswordBox.xaml
@@ -14,5 +14,6 @@
                  materialDesign:TextFieldAssist.UnderlineBrush="#4889E6"
                  Background="#A5FFFFFF"
                  PreviewTextInput="TextBox_PreviewTextInputPassword"
+                 PasswordChanged="PasswordBox_PasswordChanged"
                  LostFocus="PasswordBox_PasswordChanged"/>
 </UserControl>
