--- a/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
@@ -1,12 +1,11 @@
 ﻿<UserControl x:Class="TravelApp.DesktopHost.View.AgentStayEatView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" 
-             xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:components="clr-namespace:TravelApp.DesktopHost.View"
-             xmlns:local="clr-namespace:TravelApp.DesktopHost.View"
+             xmlns:viewmodels="clr-namespace:TravelApp.DesktopHost.ViewModel"
              d:DataContext="{d:DesignInstance Type=viewmodels:AgentStayEatViewModel}"
              mc:Ignorable="d" 
              Background="White"
@@ -260,8 +259,8 @@
                         <DataGridTemplateColumn Header="Delete">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <Button Command="{Binding DataContext.Delete, RelativeSource={RelativeSource AncestorType={x:Type DataGrid}}}" Cursor="Hand" Background="#4889E6" BorderBrush="#4889E6" BorderThickness="1" Margin="0 0 5 0" ToolTip="Delete item"
-                                            CommandParameter="{Binding SelectedItem, ElementName=MyDataGrid}">
+                                    <Button Command="{Binding DataContext.Delete, ElementName=MyDataGrid}" Cursor="Hand" Background="#4889E6" BorderBrush="#4889E6" BorderThickness="1" Margin="0 0 5 0" ToolTip="Delete item"
+                                            CommandParameter="{Binding}">
                                         <materialDesign:PackIcon Kind="Delete" Width="16" Height="16" />
                                     </Button>
                                 </DataTemplate>
