--- a/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Agent/AgentStayEatView.xaml
@@ -24,9 +24,10 @@
             <Grid Grid.Row="1" >
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*" />
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="Auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="1" 
@@ -37,14 +38,14 @@
                             FontFamily="Poppins"
                             MaxWidth="439" />
 
-                <WrapPanel Grid.Column="2" VerticalAlignment="Center" >
-                    <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
+                <WrapPanel Grid.Column="3" VerticalAlignment="Center" >
+                    <Border Width="300" Height="40" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="20">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
+                            <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="10" />
                             <Grid Grid.Column="1">
                                 <TextBox x:Name="myTextBox" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" Cursor="IBeam" FontFamily="Poppins" MaxLength="60" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
                                     <TextBox.ToolTip>
@@ -201,6 +202,7 @@
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="ToolTip" Value="{Binding Name}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -213,6 +215,7 @@
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="ToolTip" Value="{Binding Address}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -225,6 +228,7 @@
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="ToolTip" Value="{Binding Type}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -232,7 +236,7 @@
                         <DataGridTemplateColumn Header="Link" Width="1*">
                             <DataGridTemplateColumn.CellTemplate>
                                 <DataTemplate>
-                                    <TextBlock Padding="16" FontFamily="Poppins" VerticalAlignment="Center" FontSize="15">
+                                    <TextBlock Padding="16" FontFamily="Poppins" VerticalAlignment="Center" FontSize="15" Cursor="Hand">
                                         <TextBlock.ToolTip>
                                             <ToolTip>
                                                 <TextBlock Text="Visit us on the web" />
