--- a/TravelApp/DesktopHost/View/Client/ClientReservationsView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientReservationsView.xaml
@@ -24,11 +24,11 @@
 
             <Grid Grid.Row="1" >
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="1" 
@@ -39,13 +39,13 @@
                             FontFamily="Poppins"/>
 
                 <WrapPanel Grid.Column="3" VerticalAlignment="Center">
-                    <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15" >
+                    <Border Width="300" Height="40" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="20" >
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
+                            <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="10" />
                             <Grid Grid.Column="1">
                                 <TextBox x:Name="myTextBox" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" MaxLength="60" Cursor="IBeam" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
                                     <TextBox.ToolTip>
@@ -192,6 +192,7 @@
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding Trip}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -204,6 +205,7 @@
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding Price}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -223,6 +225,7 @@
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding StartDate}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
@@ -242,6 +245,7 @@
                                     <Setter Property="FontFamily" Value="Poppins" />
                                     <Setter Property="VerticalAlignment" Value="Center" />
                                     <Setter Property="ToolTip" Value="{Binding EndDate}" />
+                                    <Setter Property="Cursor" Value="Hand" />
                                 </Style>
                             </DataGridTextColumn.ElementStyle>
                         </DataGridTextColumn>
