--- a/TravelApp/DesktopHost/View/Client/ClientStayEatView.xaml
+++ b/TravelApp/DesktopHost/View/Client/ClientStayEatView.xaml
@@ -25,11 +25,11 @@
 
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="1*" />
                     <ColumnDefinition Width="auto" />
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="1*" />
                 </Grid.ColumnDefinitions>
 
                 <TextBlock Grid.Column="1" 
@@ -40,13 +40,13 @@
                             FontFamily="Poppins" />
 
                 <WrapPanel Grid.Column="3" VerticalAlignment="Center">
-                    <Border Width="200" Height="30" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="15">
+                    <Border Width="300" Height="40" Background="White" BorderBrush="Gray" BorderThickness="1" CornerRadius="20">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="*" />
                             </Grid.ColumnDefinitions>
-                            <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="5" />
+                            <materialDesign:PackIcon Grid.Column="0" Kind="Magnify" VerticalAlignment="Center" Margin="10" />
                             <Grid Grid.Column="1">
                                 <TextBox x:Name="myTextBox" Text="{Binding SearchText, UpdateSourceTrigger=PropertyChanged}" FontFamily="Poppins" MaxLength="60" Cursor="IBeam" Background="Transparent" BorderThickness="0" Padding="5" VerticalContentAlignment="Center" FontSize="14" Foreground="Black" >
                                     <TextBox.ToolTip>
