--- a/TravelApp/MainWindow.xaml
+++ b/TravelApp/MainWindow.xaml
@@ -55,6 +55,9 @@
             <DataTemplate DataType="{x:Type viewmodelsAgent:NewPlaceViewModel}">
                 <viewsAgent:NewPlaceView/>
             </DataTemplate>
+            <DataTemplate DataType="{x:Type viewmodelsAgent:NewTripViewModel}">
+                <viewsAgent:NewTripView/>
+            </DataTemplate>
             
             <DataTemplate DataType="{x:Type viewmodels:AgentReservationsViewModel}">
                 <views:AgentReservationsView/>
